Bug fix for alpha blending with capture. Updated notebook example

--- a/PyGLer/.project
+++ b/PyGLer/.project
@@ -3,6 +3,7 @@
 	<name>PyGLer</name>
 	<comment></comment>
 	<projects>
+		<project>PyCVCommons</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
